--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "jcarousel"]
 	path = include/jcarousel
-	url = https://github.com/jsor/jcarousel.git
+	url = https://cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.9/jquery.jcarousel.min.js
