--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "jcarousel"]
 	path = ./jcarousel
-	url = https://cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.9/jquery.jcarousel.min.js
+	url = "https://cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.9/jquery.jcarousel.min.js"
 
 [submodule "jquery"]
 	path = ./jquery
-	url = https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js
+	url = "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
